tests/fail/escape_func_life.stderr
error[E0455]: Returning reference to local variable 'a' is unsafe
 --> tests/fail/escape_func_life.tk:3:12
  |
 3 |     return &a
  |            ^
error[E0455]: Returning reference to local variable 'a' is unsafe
 --> tests/fail/escape_func_life.tk:7:13
  |
 7 |     return (&a, &b)
  |             ^
error[E0455]: Returning reference to local variable 'b' is unsafe
 --> tests/fail/escape_func_life.tk:7:17
  |
 7 |     return (&a, &b)
  |                 ^
